frame/support/test/tests/pallet_ui/type_value_001.stderr
error: Invalid pallet::type_value, expect item fn
  --> $DIR/type_value_001.rs:18:24
   |
18 |     #[pallet::type_value] struct Foo;
   |                           ^^^^^^
